parser/src/parser/snapshots/parser__parser__parser__tests__class_def_statement-5.snap
---
source: parser/src/parser/parser.rs
description: "class a(b,\n                c,\n                d): pass"
---
Module {
    node: Node {
        start: 0,
        end: 54,
    },
    body: [
        ClassDef(
            ClassDef {
                node: Node {
                    start: 0,
                    end: 54,
                },
                name: "a",
                bases: [
                    Name(
                        Name {
                            node: Node {
                                start: 8,
                                end: 9,
                            },
                            id: "b",
                        },
                    ),
                    Name(
                        Name {
                            node: Node {
                                start: 27,
                                end: 28,
                            },
                            id: "c",
                        },
                    ),
                    Name(
                        Name {
                            node: Node {
                                start: 46,
                                end: 47,
                            },
                            id: "d",
                        },
                    ),
                ],
                starargs: None,
                keywords: [],
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 50,
                                end: 54,
                            },
                        },
                    ),
                ],
                decorator_list: [],
            },
        ),
    ],
}
