parser/src/parser/snapshots/parser__parser__parser__tests__comparison-6.snap
---
source: parser/src/parser/parser.rs
description: a <= b
---
Module {
    node: Node {
        start: 0,
        end: 6,
    },
    body: [
        ExpressionStatement(
            Compare(
                Compare {
                    node: Node {
                        start: 0,
                        end: 6,
                    },
                    left: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                    ops: [
                        LtE,
                    ],
                    comparators: [
                        Name(
                            Name {
                                node: Node {
                                    start: 5,
                                    end: 6,
                                },
                                id: "b",
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
