parser/src/parser/snapshots/parser__parser__parser__tests__dict.snap
---
source: parser/src/parser/parser.rs
description: "{a: b, c: d}"
---
Module {
    node: Node {
        start: 0,
        end: 12,
    },
    body: [
        ExpressionStatement(
            Dict(
                Dict {
                    node: Node {
                        start: 0,
                        end: 12,
                    },
                    keys: [
                        Name(
                            Name {
                                node: Node {
                                    start: 1,
                                    end: 2,
                                },
                                id: "a",
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 7,
                                    end: 8,
                                },
                                id: "c",
                            },
                        ),
                    ],
                    values: [
                        Name(
                            Name {
                                node: Node {
                                    start: 4,
                                    end: 5,
                                },
                                id: "b",
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 10,
                                    end: 11,
                                },
                                id: "d",
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
