parser/src/parser/snapshots/parser__parser__parser__tests__for_statement-2.snap
---
source: parser/src/parser/parser.rs
description: "for a in b:\n    pass"
---
Module {
    node: Node {
        start: 0,
        end: 20,
    },
    body: [
        ForStatement(
            For {
                node: Node {
                    start: 0,
                    end: 20,
                },
                target: Name(
                    Name {
                        node: Node {
                            start: 4,
                            end: 5,
                        },
                        id: "a",
                    },
                ),
                iter: Name(
                    Name {
                        node: Node {
                            start: 9,
                            end: 10,
                        },
                        id: "b",
                    },
                ),
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 16,
                                end: 20,
                            },
                        },
                    ),
                ],
                orelse: [],
            },
        ),
    ],
}
