parser/src/parser/snapshots/parser__parser__parser__tests__for_statement-4.snap
---
source: parser/src/parser/parser.rs
description: "for a in range(10), range(10):\n    a = 1\n"
---
Module {
    node: Node {
        start: 0,
        end: 41,
    },
    body: [
        ForStatement(
            For {
                node: Node {
                    start: 0,
                    end: 41,
                },
                target: Name(
                    Name {
                        node: Node {
                            start: 4,
                            end: 5,
                        },
                        id: "a",
                    },
                ),
                iter: Tuple(
                    Tuple {
                        node: Node {
                            start: 0,
                            end: 29,
                        },
                        elements: [
                            Call(
                                Call {
                                    node: Node {
                                        start: 9,
                                        end: 18,
                                    },
                                    func: Name(
                                        Name {
                                            node: Node {
                                                start: 9,
                                                end: 14,
                                            },
                                            id: "range",
                                        },
                                    ),
                                    args: [
                                        Constant(
                                            Constant {
                                                node: Node {
                                                    start: 15,
                                                    end: 17,
                                                },
                                                value: Int(
                                                    "10",
                                                ),
                                            },
                                        ),
                                    ],
                                    keywords: [],
                                    starargs: None,
                                    kwargs: None,
                                },
                            ),
                            Call(
                                Call {
                                    node: Node {
                                        start: 20,
                                        end: 29,
                                    },
                                    func: Name(
                                        Name {
                                            node: Node {
                                                start: 20,
                                                end: 25,
                                            },
                                            id: "range",
                                        },
                                    ),
                                    args: [
                                        Constant(
                                            Constant {
                                                node: Node {
                                                    start: 26,
                                                    end: 28,
                                                },
                                                value: Int(
                                                    "10",
                                                ),
                                            },
                                        ),
                                    ],
                                    keywords: [],
                                    starargs: None,
                                    kwargs: None,
                                },
                            ),
                        ],
                    },
                ),
                body: [
                    AssignStatement(
                        Assign {
                            node: Node {
                                start: 35,
                                end: 40,
                            },
                            targets: [
                                Name(
                                    Name {
                                        node: Node {
                                            start: 35,
                                            end: 36,
                                        },
                                        id: "a",
                                    },
                                ),
                            ],
                            value: Constant(
                                Constant {
                                    node: Node {
                                        start: 39,
                                        end: 40,
                                    },
                                    value: Int(
                                        "1",
                                    ),
                                },
                            ),
                        },
                    ),
                ],
                orelse: [],
            },
        ),
    ],
}
